--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 
         <div class="barra-texto">
           <span id="vida-atual">100</span>
-          <img src="assets/separador.png" class="separador" alt="/">
-          <input id="vida-max-input" class="valor-max" type="number" min="1" step="1" value="100" />
+          <!-- caminho ajustado -->
+          <img src="separador.png" class="separador" alt="/">
+          <input id="vida-max-input" class="valor-max" type="number" min="1" value="100">
         </div>
 
       </div>
@@ -36,7 +37,7 @@
   <!-- SANIDADE -->
   <div class="bloco">
     <div class="titulo">
-      PD <img src="assets/separador.png" class="separador-titulo" alt="/"> SANIDADE
+      PD <img src="separador.png" class="separador-titulo" alt="/"> SANIDADE
     </div>
 
     <div class="linha">
@@ -46,8 +47,8 @@
 
         <div class="barra-texto">
           <span id="sanidade-atual">100</span>
-          <img src="assets/separador.png" class="separador" alt="/">
-          <input id="sanidade-max-input" class="valor-max" type="number" min="1" step="1" value="100" />
+          <img src="separador.png" class="separador" alt="/">
+          <input id="sanidade-max-input" class="valor-max" type="number" min="1" value="100">
         </div>
 
       </div>
