--- a/index.html
+++ b/index.html
@@ -1,98 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-<meta charset="UTF-8">
-<title>Painel RPG</title>
-
-<style>
-body {
-  background:#0f0f0f;
-  color:#fff;
-  font-family: Arial, sans-serif;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  height:100vh;
-}
-
-.painel {
-  width:380px;
-  background:#141414;
-  padding:24px;
-  border-radius:14px;
-  box-shadow:0 0 25px rgba(0,0,0,.7);
-}
-
-.bloco {
-  margin-bottom:30px;
-}
-
-.titulo {
-  font-size:18px;
-  margin-bottom:6px;
-}
-
-.barra-externa {
-  position:relative;
-  height:28px;
-  background:#1e1e1e;
-  border-radius:8px;
-  overflow:hidden;
-}
-
-.barra-interna {
-  height:100%;
-  width:100%;
-  transition:width .3s ease;
-}
-
-.vida { background:#b02a2a; }
-.sanidade { background:#2a3fb0; }
-
-.barra-texto {
-  position:absolute;
-  inset:0;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  font-weight:bold;
-  z-index:2;
-  transition:opacity .2s ease;
-}
-
-.controles {
-  display:flex;
-  justify-content:space-between;
-  margin-top:6px;
-}
-
-.controles input {
-  width:60px;
-}
-
-/* ===== ANIMAÇÕES ===== */
-@keyframes piscar {
-  0% { opacity:1; }
-  50% { opacity:.2; }
-  100% { opacity:1; }
-}
-
-.piscar {
-  animation: piscar 0.9s infinite;
-}
-
-/* ===== ZERADO ===== */
-.zerado {
-  background:#000 !important;
-}
-
-.texto-zerado {
-  color:#000;
-  opacity:.35;
-}
-</style>
+  <meta charset="UTF-8" />
+  <title>Painel RPG</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
 
 <div class="painel">
@@ -101,93 +13,54 @@ body {
   <div class="bloco">
     <div class="titulo">VIDA</div>
 
-    <div class="barra-externa">
-      <div class="barra-interna vida" id="vidaBarra"></div>
-      <div class="barra-texto" id="vidaTexto"></div>
-    </div>
+    <div class="linha">
+      <div class="barra-externa">
 
-    <div class="controles">
-      <div>
-        Atual:
-        <input type="number" id="vidaAtual" value="10" min="0">
+        <div class="barra-interna vida" id="vida-barra"></div>
+
+        <div class="barra-texto">
+          <span id="vida-atual">100</span>
+          <img src="separador.png" class="separador" alt="/" />
+          <input id="vida-max-input" class="valor-max" type="number" min="1" value="100" />
+        </div>
+
       </div>
-      <div>
-        Máx:
-        <input type="number" id="vidaMax" value="10" min="1">
+
+      <div class="controles">
+        <button id="vida-menos" class="ctrl">−</button>
+        <button id="vida-mais" class="ctrl">+</button>
       </div>
     </div>
   </div>
 
   <!-- SANIDADE -->
   <div class="bloco">
-    <div class="titulo">SANIDADE</div>
-
-    <div class="barra-externa">
-      <div class="barra-interna sanidade" id="sanBarra"></div>
-      <div class="barra-texto" id="sanTexto"></div>
+    <div class="titulo">
+      PD <img src="separador.png" class="separador-titulo" alt="/" /> SANIDADE
     </div>
 
-    <div class="controles">
-      <div>
-        Atual:
-        <input type="number" id="sanAtual" value="10" min="0">
+    <div class="linha">
+      <div class="barra-externa">
+
+        <div class="barra-interna sanidade" id="sanidade-barra"></div>
+
+        <div class="barra-texto">
+          <span id="sanidade-atual">100</span>
+          <img src="separador.png" class="separador" alt="/" />
+          <input id="sanidade-max-input" class="valor-max" type="number" min="1" value="100" />
+        </div>
+
       </div>
-      <div>
-        Máx:
-        <input type="number" id="sanMax" value="10" min="1">
+
+      <div class="controles">
+        <button id="sanidade-menos" class="ctrl">−</button>
+        <button id="sanidade-mais" class="ctrl">+</button>
       </div>
     </div>
   </div>
 
 </div>
 
-<script>
-function atualizar(atual, max, barra, texto) {
-  atual = Math.max(0, atual);
-  max = Math.max(1, max);
-
-  const pct = (atual / max) * 100;
-  barra.style.width = pct + "%";
-  texto.textContent = `${atual} / ${max}`;
-
-  /* limpa estados */
-  barra.classList.remove("piscar", "zerado");
-  texto.classList.remove("piscar", "texto-zerado");
-
-  /* regras */
-  if (atual === 0) {
-    barra.classList.add("zerado");
-    texto.classList.add("texto-zerado");
-  }
-  else if (atual <= 5) {
-    barra.classList.add("piscar");
-    texto.classList.add("piscar");
-  }
-}
-
-/* VIDA */
-const vidaAtual = document.getElementById("vidaAtual");
-const vidaMax   = document.getElementById("vidaMax");
-const vidaBarra = document.getElementById("vidaBarra");
-const vidaTexto = document.getElementById("vidaTexto");
-
-/* SANIDADE */
-const sanAtual = document.getElementById("sanAtual");
-const sanMax   = document.getElementById("sanMax");
-const sanBarra = document.getElementById("sanBarra");
-const sanTexto = document.getElementById("sanTexto");
-
-function atualizarTudo() {
-  atualizar(+vidaAtual.value, +vidaMax.value, vidaBarra, vidaTexto);
-  atualizar(+sanAtual.value, +sanMax.value, sanBarra, sanTexto);
-}
-
-document.querySelectorAll("input").forEach(i =>
-  i.addEventListener("input", atualizarTudo)
-);
-
-atualizarTudo();
-</script>
-
+<script src="script.js"></script>
 </body>
 </html>
