--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Painel RPG</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -20,15 +20,15 @@
 
         <div class="barra-texto">
           <span id="vida-atual">100</span>
-          <img src="separador.png" class="separador" alt="/" />
-          <input id="vida-max-input" class="valor-max" type="number" min="1" value="100" />
+          <img src="assets/separador.png" class="separador" alt="/">
+          <input id="vida-max-input" class="valor-max" type="number" min="1" value="100">
         </div>
 
       </div>
 
       <div class="controles">
-        <button id="vida-menos" class="ctrl">−</button>
-        <button id="vida-mais" class="ctrl">+</button>
+        <button id="vida-menos">−</button>
+        <button id="vida-mais">+</button>
       </div>
     </div>
   </div>
@@ -36,7 +36,7 @@
   <!-- SANIDADE -->
   <div class="bloco">
     <div class="titulo">
-      PD <img src="separador.png" class="separador-titulo" alt="/" /> SANIDADE
+      PD <img src="assets/separador.png" class="separador-titulo" alt="/"> SANIDADE
     </div>
 
     <div class="linha">
@@ -46,15 +46,15 @@
 
         <div class="barra-texto">
           <span id="sanidade-atual">100</span>
-          <img src="separador.png" class="separador" alt="/" />
-          <input id="sanidade-max-input" class="valor-max" type="number" min="1" value="100" />
+          <img src="assets/separador.png" class="separador" alt="/">
+          <input id="sanidade-max-input" class="valor-max" type="number" min="1" value="100">
         </div>
 
       </div>
 
       <div class="controles">
-        <button id="sanidade-menos" class="ctrl">−</button>
-        <button id="sanidade-mais" class="ctrl">+</button>
+        <button id="sanidade-menos">−</button>
+        <button id="sanidade-mais">+</button>
       </div>
     </div>
   </div>
