--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <title>Painel RPG</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="data:,">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -14,23 +13,21 @@
   <div class="bloco">
     <div class="titulo">VIDA</div>
 
-    <div class="linha">
-      <div class="barra-externa">
-
-        <div class="barra-interna vida" id="vida-barra"></div>
-
-        <div class="barra-texto" id="vida-texto-container">
-          <span id="vida-atual">100</span>
-          <img src="separador.png" class="separador" alt="/">
-          <input id="vida-max-input" class="valor-max" type="number" min="1" step="1" value="100" />
-        </div>
-
+    <div class="barra-container">
+      <div class="barra-fundo">
+        <div class="barra-preenchimento vida" id="vida-barra"></div>
       </div>
-
-      <div class="controles">
-        <button id="vida-menos">−</button>
-        <button id="vida-mais">+</button>
+      
+      <div class="barra-texto-overlay" id="vida-texto-container">
+        <span id="vida-atual">0</span>
+        <img src="separador.png" class="separador-nums" alt="/">
+        <input id="vida-max-input" class="valor-max" type="number" value="0" />
       </div>
+    </div>
+
+    <div class="controles">
+      <button id="vida-menos">−</button>
+      <button id="vida-mais">+</button>
     </div>
   </div>
 
@@ -39,23 +36,21 @@
       PD <img src="separador.png" class="separador-titulo" alt="/"> SANIDADE
     </div>
 
-    <div class="linha">
-      <div class="barra-externa">
-
-        <div class="barra-interna sanidade" id="sanidade-barra"></div>
-
-        <div class="barra-texto" id="sanidade-texto-container">
-          <span id="sanidade-atual">100</span>
-          <img src="separador.png" class="separador" alt="/">
-          <input id="sanidade-max-input" class="valor-max" type="number" min="1" step="1" value="100" />
-        </div>
-
+    <div class="barra-container">
+      <div class="barra-fundo">
+        <div class="barra-preenchimento sanidade" id="sanidade-barra"></div>
       </div>
 
-      <div class="controles">
-        <button id="sanidade-menos">−</button>
-        <button id="sanidade-mais">+</button>
+      <div class="barra-texto-overlay" id="sanidade-texto-container">
+        <span id="sanidade-atual">0</span>
+        <img src="separador.png" class="separador-nums" alt="/">
+        <input id="sanidade-max-input" class="valor-max" type="number" value="0" />
       </div>
+    </div>
+
+    <div class="controles">
+      <button id="sanidade-menos">−</button>
+      <button id="sanidade-mais">+</button>
     </div>
   </div>
 
