--- a/index.html
+++ b/index.html
@@ -14,20 +14,18 @@
     <div class="titulo">VIDA</div>
 
     <div class="barra-container">
-      <div class="barra-fundo">
-        <div class="barra-preenchimento vida" id="vida-barra"></div>
-      </div>
+      <div class="barra-preenchimento vida" id="vida-barra"></div>
       
-      <div class="barra-texto-overlay" id="vida-texto-container">
+      <div class="barra-overlay" id="vida-overlay">
         <span id="vida-atual">0</span>
-        <img src="separador.png" class="separador-nums" alt="/">
-        <input id="vida-max-input" class="valor-max" type="number" value="0" />
+        <img src="separador.png" class="separador-img" alt="/">
+        <input id="vida-max-input" class="input-transparente" type="number" value="0" />
       </div>
     </div>
 
     <div class="controles">
-      <button id="vida-menos">−</button>
-      <button id="vida-mais">+</button>
+      <button id="vida-menos" class="btn-sinal">-</button>
+      <button id="vida-mais" class="btn-sinal">+</button>
     </div>
   </div>
 
@@ -37,20 +35,18 @@
     </div>
 
     <div class="barra-container">
-      <div class="barra-fundo">
-        <div class="barra-preenchimento sanidade" id="sanidade-barra"></div>
-      </div>
-
-      <div class="barra-texto-overlay" id="sanidade-texto-container">
+      <div class="barra-preenchimento sanidade" id="sanidade-barra"></div>
+      
+      <div class="barra-overlay" id="sanidade-overlay">
         <span id="sanidade-atual">0</span>
-        <img src="separador.png" class="separador-nums" alt="/">
-        <input id="sanidade-max-input" class="valor-max" type="number" value="0" />
+        <img src="separador.png" class="separador-img" alt="/">
+        <input id="sanidade-max-input" class="input-transparente" type="number" value="0" />
       </div>
     </div>
 
     <div class="controles">
-      <button id="sanidade-menos">−</button>
-      <button id="sanidade-mais">+</button>
+      <button id="sanidade-menos" class="btn-sinal">-</button>
+      <button id="sanidade-mais" class="btn-sinal">+</button>
     </div>
   </div>
 
