--- a/index.html
+++ b/index.html
@@ -4,49 +4,58 @@
   <meta charset="UTF-8">
   <title>Painel RPG</title>
   <link rel="stylesheet" href="style.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
 <div class="painel">
 
+  <!-- VIDA -->
   <div class="bloco">
     <div class="titulo">VIDA</div>
 
-    <div class="barra-container">
-      <div class="barra-preenchimento vida" id="vida-barra"></div>
-      
-      <div class="barra-overlay" id="vida-overlay">
-        <span id="vida-atual">0</span>
-        <img src="separador.png" class="separador-img" alt="/">
-        <input id="vida-max-input" class="input-transparente" type="number" value="0" />
-      </div>
-    </div>
+    <div class="linha">
+      <div class="barra-externa">
 
-    <div class="controles">
-      <button id="vida-menos" class="btn-sinal">-</button>
-      <button id="vida-mais" class="btn-sinal">+</button>
+        <div class="barra-interna vida" id="vida-barra"></div>
+
+        <div class="barra-texto">
+          <span id="vida-atual">100</span>
+          <img src="separador.png" class="separador" alt="/">
+          <input id="vida-max-input" class="valor-max" type="number" min="1" value="100">
+        </div>
+
+      </div>
+
+      <div class="controles">
+        <button id="vida-menos">−</button>
+        <button id="vida-mais">+</button>
+      </div>
     </div>
   </div>
 
+  <!-- SANIDADE -->
   <div class="bloco">
     <div class="titulo">
       PD <img src="separador.png" class="separador-titulo" alt="/"> SANIDADE
     </div>
 
-    <div class="barra-container">
-      <div class="barra-preenchimento sanidade" id="sanidade-barra"></div>
-      
-      <div class="barra-overlay" id="sanidade-overlay">
-        <span id="sanidade-atual">0</span>
-        <img src="separador.png" class="separador-img" alt="/">
-        <input id="sanidade-max-input" class="input-transparente" type="number" value="0" />
-      </div>
-    </div>
+    <div class="linha">
+      <div class="barra-externa">
 
-    <div class="controles">
-      <button id="sanidade-menos" class="btn-sinal">-</button>
-      <button id="sanidade-mais" class="btn-sinal">+</button>
+        <div class="barra-interna sanidade" id="sanidade-barra"></div>
+
+        <div class="barra-texto">
+          <span id="sanidade-atual">100</span>
+          <img src="separador.png" class="separador" alt="/">
+          <input id="sanidade-max-input" class="valor-max" type="number" min="1" value="100">
+        </div>
+
+      </div>
+
+      <div class="controles">
+        <button id="sanidade-menos">−</button>
+        <button id="sanidade-mais">+</button>
+      </div>
     </div>
   </div>
 
