--- a/index.html
+++ b/index.html
@@ -15,15 +15,13 @@
 
     <div class="linha">
       <div class="barra-externa">
-
         <div class="barra-interna vida" id="vida-barra"></div>
 
         <div class="barra-texto">
           <span id="vida-atual">100</span>
-          <img src="separador.png" class="separador" alt="/">
+          <img src="separador.png" class="separador">
           <input id="vida-max-input" class="valor-max" type="number" min="1" value="100">
         </div>
-
       </div>
 
       <div class="controles">
@@ -36,20 +34,18 @@
   <!-- SANIDADE -->
   <div class="bloco">
     <div class="titulo">
-      PD <img src="separador.png" class="separador-titulo" alt="/"> SANIDADE
+      PD <img src="separador.png" class="separador-titulo"> SANIDADE
     </div>
 
     <div class="linha">
       <div class="barra-externa">
-
         <div class="barra-interna sanidade" id="sanidade-barra"></div>
 
         <div class="barra-texto">
           <span id="sanidade-atual">100</span>
-          <img src="separador.png" class="separador" alt="/">
+          <img src="separador.png" class="separador">
           <input id="sanidade-max-input" class="valor-max" type="number" min="1" value="100">
         </div>
-
       </div>
 
       <div class="controles">
