--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
 
     <div class="linha">
       <div class="barra-externa">
+
         <div class="barra-interna vida" id="vida-barra"></div>
 
         <div class="barra-texto">
           <span id="vida-atual">100</span>
-          <img src="separador.png" class="separador">
+          <img src="separador.png" class="separador" alt="/">
           <input id="vida-max-input" class="valor-max" type="number" min="1" value="100">
         </div>
+
       </div>
 
       <div class="controles">
@@ -34,18 +36,20 @@
   <!-- SANIDADE -->
   <div class="bloco">
     <div class="titulo">
-      PD <img src="separador.png" class="separador-titulo"> SANIDADE
+      PD <img src="separador.png" class="separador-titulo" alt="/"> SANIDADE
     </div>
 
     <div class="linha">
       <div class="barra-externa">
+
         <div class="barra-interna sanidade" id="sanidade-barra"></div>
 
         <div class="barra-texto">
           <span id="sanidade-atual">100</span>
-          <img src="separador.png" class="separador">
+          <img src="separador.png" class="separador" alt="/">
           <input id="sanidade-max-input" class="valor-max" type="number" min="1" value="100">
         </div>
+
       </div>
 
       <div class="controles">
